# clab-midi

./: .gitignore  CMakeLists.txt  Clab-midi.pc.in  INSTALL.txt  LICENSE.md  README.txt
src/: .gitignore  Clab-midi.cpp  Clab-midi.h.in  Manager.cpp  Manager.h  MidiOut.cpp  MidiOut.h  Video.cpp  Video.h  config.h.in  main.cpp
src/Atoms/: MidiLoop.cpp  MidiLoop.h  MidiOut.cpp  MidiOut.h
src/System/: Midi.cpp  Midi.h  toaster.h
src/Test/: main.cpp
